test/fail_compilation/fail167.d

void main()
{
    int x;
    const(int)* p = &x;
    *p = 3;
}
